<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/stores" />
    </group>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_beers"
            android:icon="@drawable/ic_baseline_local_drink_24"
            android:title="@string/beers"/>
    </group>
</menu>