<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewProductName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/item_product_name"
                android:textAppearance="@style/ProductBody"
                app:layout_constraintBottom_toTopOf="@+id/textViewProductPrice"
                app:layout_constraintStart_toEndOf="@+id/imageViewBurger"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductStoreName" />

            <TextView
                android:id="@+id/textViewProductPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_product_price"
                android:textAppearance="@style/ProductBody"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textViewProductName2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textViewProductName2" />

            <TextView
                android:id="@+id/textViewProductStoreName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_product_store_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/ProductTitle"
                app:layout_constraintEnd_toEndOf="@+id/textViewProductName2"
                app:layout_constraintStart_toStartOf="@+id/imageViewBurger"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewBurger"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/item_product_logo_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductStoreName"
                app:srcCompat="@drawable/ic_baseline_fastfood_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>